force-app/main/default/objects/Flight_Number_Mapping__c/Flight_Number_Mapping__c.object-meta.xml
<CustomObject>
    <label>Flight Number Mapping</label>
    <nameField>
        <label>Flight Number String</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Number Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>