force-app/main/default/objects/Flight_Number_Mapping__c/fields/Agent_s_Conclusion_Template__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_Conclusion_Template__c</fullName>
    <label>Agent&apos;s Conclusion Template</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>