force-app/main/default/objects/Flight_Number_Mapping__c/fields/All_The_Way_Service__c.field-meta.xml
<CustomField>
    <fullName>All_The_Way_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All The Way Service</label>
    <type>Checkbox</type>
</CustomField>