force-app/main/default/objects/Flight_Number_Mapping__c/fields/All_The_Way_Service_FRST__c.field-meta.xml
<CustomField>
    <fullName>All_The_Way_Service_FRST__c</fullName>
    <label>All The Way Service (FRST)</label>
    <type>TextArea</type>
</CustomField>