force-app/main/default/objects/Flight_Number_Mapping__c/fields/Assigned_Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Case_Team__c</fullName>
    <label>Assigned Case Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AOD-ALL Team</fullName>
            </value>
            <value>
                <fullName>AOD-BKK Team</fullName>
            </value>
            <value>
                <fullName>AOD-CEB Team</fullName>
            </value>
            <value>
                <fullName>AOD-CNX Team</fullName>
            </value>
            <value>
                <fullName>AOD-CRK Team</fullName>
            </value>
            <value>
                <fullName>AOD-CTS Team</fullName>
            </value>
            <value>
                <fullName>AOD-DAD Team</fullName>
            </value>
            <value>
                <fullName>AOD-DPS Team</fullName>
            </value>
            <value>
                <fullName>AOD-FUK Team</fullName>
            </value>
            <value>
                <fullName>AOD-HAN Team</fullName>
            </value>
            <value>
                <fullName>AOD-HQ Team</fullName>
            </value>
            <value>
                <fullName>AOD-KIX Team</fullName>
            </value>
            <value>
                <fullName>AOD-KMJ Team</fullName>
            </value>
            <value>
                <fullName>AOD-KUL Team</fullName>
            </value>
            <value>
                <fullName>AOD-LAX Team</fullName>
            </value>
            <value>
                <fullName>AOD-MFM Team</fullName>
            </value>
            <value>
                <fullName>AOD-MNL Team</fullName>
            </value>
            <value>
                <fullName>AOD-NGO Team</fullName>
            </value>
            <value>
                <fullName>AOD-NRT Team</fullName>
            </value>
            <value>
                <fullName>AOD-OKA Team</fullName>
            </value>
            <value>
                <fullName>AOD-ONT Team</fullName>
            </value>
            <value>
                <fullName>AOD-PEN Team</fullName>
            </value>
            <value>
                <fullName>AOD-PHX Team</fullName>
            </value>
            <value>
                <fullName>AOD-SDJ Team</fullName>
            </value>
            <value>
                <fullName>AOD-SEA Team</fullName>
            </value>
            <value>
                <fullName>AOD-SFO Team</fullName>
            </value>
            <value>
                <fullName>AOD-SGN Team</fullName>
            </value>
            <value>
                <fullName>AOD-SIN Team</fullName>
            </value>
            <value>
                <fullName>AOD-TPE Team</fullName>
            </value>
            <value>
                <fullName>B2B Sales team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>