force-app/main/default/objects/Flight_Number_Mapping__c/fields/Chauffeur_Outstation_Answer__c.field-meta.xml
<CustomField>
    <fullName>Chauffeur_Outstation_Answer__c</fullName>
    <label>Chauffeur (Outstation) Answer</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>