force-app/main/default/objects/Flight_Number_Mapping__c/fields/Chauffeur_Outstation_Details__c.field-meta.xml
<CustomField>
    <fullName>Chauffeur_Outstation_Details__c</fullName>
    <label>Chauffeur (Outstation) Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>