force-app/main/default/objects/Flight_Number_Mapping__c/fields/Departure_From__c.field-meta.xml
<CustomField>
    <fullName>Departure_From__c</fullName>
    <label>Departure (From)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>