force-app/main/default/objects/Flight_Number_Mapping__c/fields/Description_Template__c.field-meta.xml
<CustomField>
    <fullName>Description_Template__c</fullName>
    <label>Description Template</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>