force-app/main/default/objects/Flight_Number_Mapping__c/fields/Destination_To__c.field-meta.xml
<CustomField>
    <fullName>Destination_To__c</fullName>
    <label>Destination (To)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>