force-app/main/default/objects/Flight_Number_Mapping__c/fields/FCAR_Answer__c.field-meta.xml
<CustomField>
    <fullName>FCAR_Answer__c</fullName>
    <label>FCAR Answer</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>