force-app/main/default/objects/Flight_Number_Mapping__c/fields/FCAR_Details__c.field-meta.xml
<CustomField>
    <fullName>FCAR_Details__c</fullName>
    <label>FCAR Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>