force-app/main/default/objects/Flight_Number_Mapping__c/fields/FRST_Answer__c.field-meta.xml
<CustomField>
    <fullName>FRST_Answer__c</fullName>
    <label>FRST Answer</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>