force-app/main/default/objects/Flight_Number_Mapping__c/fields/FRST_Details__c.field-meta.xml
<CustomField>
    <fullName>FRST_Details__c</fullName>
    <label>FRST Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>