force-app/main/default/objects/Flight_Number_Mapping__c/fields/HYLG_Answer__c.field-meta.xml
<CustomField>
    <fullName>HYLG_Answer__c</fullName>
    <label>HYLG Answer</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>