force-app/main/default/objects/Flight_Number_Mapping__c/fields/HYLG_Details__c.field-meta.xml
<CustomField>
    <fullName>HYLG_Details__c</fullName>
    <label>HYLG Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>