force-app/main/default/objects/Flight_Number_Mapping__c/fields/Meal_Details__c.field-meta.xml
<CustomField>
    <fullName>Meal_Details__c</fullName>
    <label>Meal Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>