force-app/main/default/objects/Flight_Number_Mapping__c/fields/Other_Exclusive_Service_Items__c.field-meta.xml
<CustomField>
    <fullName>Other_Exclusive_Service_Items__c</fullName>
    <label>Other Exclusive Service Items</label>
    <type>TextArea</type>
</CustomField>