force-app/main/default/objects/Flight_Number_Mapping__c/fields/Private_Terminal_Outstation_Answer__c.field-meta.xml
<CustomField>
    <fullName>Private_Terminal_Outstation_Answer__c</fullName>
    <label>Private Terminal (Outstation) Answer</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>