force-app/main/default/objects/Flight_Number_Mapping__c/fields/Private_Terminal_Outstation_Details__c.field-meta.xml
<CustomField>
    <fullName>Private_Terminal_Outstation_Details__c</fullName>
    <label>Private Terminal (Outstation) Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>