force-app/main/default/objects/Flight_Number_Mapping__c/fields/TPE_Chauffeur_Service__c.field-meta.xml
<CustomField>
    <fullName>TPE_Chauffeur_Service__c</fullName>
    <label>TPE Chauffeur Service</label>
    <type>TextArea</type>
</CustomField>