force-app/main/default/objects/Flight_Number_Mapping__c/fields/TPE_Chauffeur_Service_FRST__c.field-meta.xml
<CustomField>
    <fullName>TPE_Chauffeur_Service_FRST__c</fullName>
    <label>TPE Chauffeur Service (FRST)</label>
    <type>TextArea</type>
</CustomField>